refactor(sqlp): use VAceEditor

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -103,4 +103,11 @@ html.dark {
       }
     }
   }
+
+  .page-container {
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(36 37 37);
+  }
 }
