--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -18,3 +18,10 @@
 .html-weakness {
   filter: invert(80%);
 }
+
+.page-container {
+  margin-bottom: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: #fff;
+}
