--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -83,6 +83,16 @@ html.dark {
     }
   }
 
+  .el-button {
+    &:hover,
+    &:focus {
+      background-color: #404040 !important;
+      color: $color-white !important;
+      border-color: #505050 !important;
+      opacity: 1 !important;
+    }
+  }
+
   /* 克隆并自定义 ElMessage 样式，不会影响 ElMessage 原本样式，在 src/utils/message.ts 中调用自定义样式 ElMessage 方法即可，非暗黑模式在 src/style/element-plus.scss 文件进行了适配 */
   .pure-message {
     background-color: rgb(36 37 37) !important;
