feat(fill): skip the first n rows of csv

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -107,4 +107,14 @@ html.dark {
     border-radius: 5px;
     background-color: rgb(36 37 37);
   }
+  .custom-container1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: sticky;
+}
+.custom-container2 {
+  display: flex;
+  align-items: flex-start;
+}
 }
