--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -106,6 +106,20 @@ html.dark {
     border-radius: 5px;
     background-color: rgb(36 37 37);
   }
+  .page-container table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1em 0;
+  }
+  .page-container th,
+  .page-container td {
+    border: 1px solid #4a4b4d;
+    padding: 8px 12px;
+    text-align: left;
+  }
+  .page-container th {
+    background-color: #603e63;
+  }
   .custom-container1 {
     display: flex;
     justify-content: space-between;
