style: remove skipRows

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -109,16 +109,9 @@ html.dark {
   .page-container table {
     width: 100%;
     border-collapse: collapse;
-    margin: 1em 0;
-  }
-  .page-container th,
-  .page-container td {
-    border: 1px solid #4a4b4d;
-    padding: 8px 12px;
-    text-align: left;
   }
   .page-container th {
-    background-color: #603e63;
+    background-color: #3a383c;
   }
   .custom-container1 {
     display: flex;
