style: code format

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -122,6 +122,7 @@ html.dark {
   .custom-container2 {
     display: flex;
     align-items: flex-start;
+    width: 70%;
   }
   .node-container {
     position: relative;
