--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,7 @@
-@import "./transition";
-@import "./element-plus";
-@import "./sidebar";
-@import "./dark";
+@use "./transition";
+@use "./element-plus";
+@use "./sidebar";
+@use "./dark";
 
 /* 自定义全局 CssVar */
 :root {
@@ -22,7 +22,7 @@
 .page-container {
   padding: 3px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #fdfdfe;
 }
 .page-container table {
   width: 100%;
