--- a/src/style/sidebar.scss
+++ b/src/style/sidebar.scss
@@ -1,7 +1,5 @@
 /* $sideBarWidth: vertical 模式下主体内容距离网页文档左侧的距离 */
 @mixin merge-style($sideBarWidth) {
-  $menuActiveText: #7a80b4;
-
   @media screen and (width >= 150px) and (width <= 420px) {
     .app-main-nofixed-header {
       overflow-y: hidden;
@@ -14,6 +12,17 @@
     }
   }
 
+  /* 修复 windows 下双滚动条问题 https://github.com/pure-admin/vue-pure-admin/pull/936#issuecomment-1968125992 */
+  .el-popper.pure-scrollbar {
+    overflow: hidden;
+  }
+
+  /* popper menu 超出内容区可滚动 */
+  .pure-scrollbar {
+    max-height: calc(100vh - calc(50px * 2.5));
+    overflow: hidden auto;
+  }
+
   .sub-menu-icon {
     margin-right: 5px;
     font-size: 18px;
@@ -24,7 +33,8 @@
     }
   }
 
-  .set-icon {
+  .set-icon,
+  .fullscreen-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,7 +64,7 @@
     top: 0;
     right: 0;
     z-index: 998;
-    width: calc(100% - 210px);
+    width: calc(100% - #{$sideBarWidth});
 
     /* fixed-header 属性左上角动画 */
     transition: width var(--pure-transition-duration);
@@ -80,10 +90,10 @@
     z-index: 1001;
     width: $sideBarWidth !important;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
     font-size: 0;
-    background: $menuBg;
-    box-shadow: 0 0 1px #888;
+    background: var(--pure-theme-menu-bg) !important;
+    border-right: 1px solid var(--pure-border-color);
 
     /* 展开动画 */
     transition: width var(--pure-transition-duration);
@@ -96,14 +106,22 @@
       right: 0;
     }
 
-    .el-scrollbar {
-      height: calc(100% - 44px);
-    }
-
     &.has-logo {
       .el-scrollbar.pc {
         /* logo: 36px、leftCollapse: 40px、leftCollapse-shadow: 4px */
         height: calc(100% - 92px);
+      }
+
+      /* logo: 36px */
+      .el-scrollbar.mobile {
+        height: calc(100% - 36px);
+      }
+    }
+
+    &.no-logo {
+      .el-scrollbar.pc {
+        /* leftCollapse: 40px、leftCollapse-shadow: 4px */
+        height: calc(100% - 44px);
       }
 
       .el-scrollbar.mobile {
@@ -116,11 +134,9 @@
     }
 
     a {
-      display: inline-block;
       display: flex;
       flex-wrap: wrap;
       width: 100%;
-      padding-left: 10px;
     }
 
     .el-menu {
@@ -132,11 +148,11 @@
     .el-menu-item,
     .el-sub-menu__title {
       height: 50px;
-      color: $menuText;
+      color: var(--pure-theme-menu-text);
       background-color: transparent !important;
 
       &:hover {
-        color: $menuTitleHover !important;
+        color: var(--pure-theme-menu-title-hover) !important;
       }
 
       div,
@@ -155,15 +171,15 @@
 
     .is-active > .el-sub-menu__title,
     .is-active.submenu-title-noDropdown {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
 
       i {
-        color: $subMenuActiveText !important;
+        color: var(--pure-theme-sub-menu-active-text) !important;
       }
     }
 
     .is-active {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
       transition: color 0.3s;
     }
 
@@ -175,8 +191,8 @@
     .el-menu-item.is-active.nest-menu::before {
       position: absolute;
       inset: 0 8px;
-      margin: 4px 0;
       clear: both;
+      margin: 4px 0;
       content: "";
       background: var(--el-color-primary) !important;
       border-radius: 3px;
@@ -185,8 +201,8 @@
     .el-menu .el-menu--inline .el-sub-menu__title,
     & .el-sub-menu .el-menu-item {
       min-width: $sideBarWidth !important;
-      font-size: 12px;
-      background-color: $subMenuBg !important;
+      font-size: 14px;
+      background-color: var(--pure-theme-sub-menu-bg) !important;
     }
 
     /* 有子集的激活菜单左侧小竖条 */
@@ -196,13 +212,13 @@
       position: absolute;
       top: 0;
       left: 0;
+      clear: both;
       width: 2px;
       height: 100%;
-      clear: both;
       content: "";
-      background-color: $menuActiveBefore;
-      transition: all var(--pure-transition-duration) ease-in-out;
+      background-color: var(--pure-theme-menu-active-before);
       transform: translateY(0);
+      transition: all var(--pure-transition-duration) ease-in-out;
     }
 
     .el-menu--collapse .outer-most.el-sub-menu > .el-sub-menu__title::before {
@@ -224,8 +240,8 @@
     .is-active.submenu-title-noDropdown.outer-most::before {
       position: absolute;
       inset: 0 8px;
-      margin: 4px 0;
       clear: both;
+      margin: 4px 0;
       content: "";
       background: var(--el-color-primary) !important;
       border-radius: 3px;
@@ -235,51 +251,52 @@
   /* vertical 菜单折叠 */
   .el-menu--vertical {
     .el-menu--popup {
-      background-color: $subMenuBg !important;
+      background-color: var(--pure-theme-sub-menu-bg) !important;
 
       .el-menu-item {
         span {
-          font-size: 12px;
+          font-size: 14px;
         }
       }
     }
 
     & > .el-menu {
-      i {
-        margin-right: 20px;
+      i,
+      svg {
+        margin-right: 5px;
       }
     }
 
     .is-active > .el-sub-menu__title,
     .is-active.submenu-title-noDropdown {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
 
       i {
-        color: $subMenuActiveText !important;
+        color: var(--pure-theme-sub-menu-active-text) !important;
       }
     }
 
     /* 子菜单中还有子菜单 */
     .el-menu .el-sub-menu__title {
       min-width: $sideBarWidth !important;
-      font-size: 12px;
-      background-color: $subMenuBg !important;
+      font-size: 14px;
+      background-color: var(--pure-theme-sub-menu-bg) !important;
     }
 
     .el-menu-item,
     .el-sub-menu__title {
       height: 50px;
       line-height: 50px;
-      color: $menuText;
-      background-color: $subMenuBg;
+      color: var(--pure-theme-menu-text);
+      background-color: var(--pure-theme-sub-menu-bg);
 
       &:hover {
-        color: $menuTitleHover !important;
+        color: var(--pure-theme-menu-title-hover) !important;
       }
     }
 
     .is-active {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
       transition: color 0.3s;
     }
 
@@ -317,58 +334,61 @@
       margin-top: 0;
     }
 
+    /* 无子菜单时激活 border-bottom */
+    a > .is-active.submenu-title-noDropdown {
+      border-bottom: 2px solid var(--el-menu-active-color);
+    }
+
     .el-menu--popup {
-      background-color: $subMenuBg !important;
+      background-color: var(--pure-theme-sub-menu-bg) !important;
+
+      a > .is-active.submenu-title-noDropdown {
+        border-bottom: none;
+      }
 
       .el-menu-item {
-        color: $menuText;
-        background-color: $subMenuBg;
+        color: var(--pure-theme-menu-text);
+        background-color: var(--pure-theme-sub-menu-bg);
 
         span {
-          font-size: 12px;
+          font-size: 14px;
         }
       }
 
       .el-sub-menu__title {
-        color: $menuText;
+        color: var(--pure-theme-menu-text);
       }
-    }
-
-    /* 无子菜单时激活 border-bottom */
-    .router-link-exact-active > .submenu-title-noDropdown {
-      height: 60px;
-      border-bottom: 2px solid var(--el-menu-active-color);
     }
 
     /* 子菜单中还有子菜单 */
     .el-menu .el-sub-menu__title {
       min-width: $sideBarWidth !important;
-      font-size: 12px;
-      background-color: $subMenuBg !important;
+      font-size: 14px;
+      background-color: var(--pure-theme-sub-menu-bg) !important;
 
       &:hover {
-        color: $menuTitleHover !important;
+        color: var(--pure-theme-menu-title-hover) !important;
       }
     }
 
     .is-active > .el-sub-menu__title,
     .is-active.submenu-title-noDropdown {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
 
       i {
-        color: $subMenuActiveText !important;
+        color: var(--pure-theme-sub-menu-active-text) !important;
       }
     }
 
     .nest-menu .el-sub-menu > .el-sub-menu__title,
     .el-menu-item {
       &:hover {
-        color: $menuTitleHover !important;
+        color: var(--pure-theme-menu-title-hover) !important;
       }
     }
 
     .el-menu-item.is-active {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
       transition: color 0.3s;
     }
 
@@ -393,7 +413,7 @@
     justify-content: space-around;
     width: 100%;
     height: 36px;
-    background: $menuBg;
+    background: var(--pure-theme-menu-bg) !important;
 
     .horizontal-header-left {
       display: flex;
@@ -415,11 +435,11 @@
         height: 32px;
         margin: 2px 0 0 12px;
         overflow: hidden;
+        text-overflow: ellipsis;
         font-size: 18px;
         font-weight: 600;
         line-height: 32px;
-        color: $subMenuActiveText;
-        text-overflow: ellipsis;
+        color: var(--pure-theme-sub-menu-active-text);
         white-space: nowrap;
       }
     }
@@ -436,16 +456,29 @@
       align-items: center;
       justify-content: flex-end;
       min-width: 340px;
-      color: $subMenuActiveText;
+      color: var(--pure-theme-sub-menu-active-text);
 
       /* 搜索 */
-      .search-container,
+      .search-container
       /* 设置 */
       .set-icon {
         &:hover {
-          background: $menuHover;
+          background: var(--pure-theme-menu-hover);
         }
       }
+
+      .globalization {
+        width: 40px;
+        height: 36px;
+        padding: 11px;
+        color: var(--pure-theme-sub-menu-active-text);
+        cursor: pointer;
+        outline: none;
+      }
+    }
+
+    .el-input__wrapper {
+      background: var(--pure-theme-menu-hover);
     }
 
     .el-menu {
@@ -458,10 +491,10 @@
     .el-menu-item,
     .el-sub-menu__title {
       padding-right: var(--el-menu-base-level-padding);
-      color: $menuText;
+      color: var(--pure-theme-menu-text);
 
       &:hover {
-        color: $menuTitleHover !important;
+        color: var(--pure-theme-menu-title-hover) !important;
       }
     }
 
@@ -469,7 +502,7 @@
     .el-sub-menu__title {
       height: 36px;
       line-height: 36px;
-      background: $menuBg;
+      background: var(--pure-theme-menu-bg) !important;
 
       svg {
         position: static !important;
@@ -478,15 +511,15 @@
 
     .is-active > .el-sub-menu__title,
     .is-active.submenu-title-noDropdown {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
 
       i {
-        color: $subMenuActiveText !important;
+        color: var(--pure-theme-sub-menu-active-text) !important;
       }
     }
 
     .is-active {
-      color: $subMenuActiveText !important;
+      color: var(--pure-theme-sub-menu-active-text) !important;
       transition: color 0.3s;
     }
   }
@@ -507,6 +540,7 @@
     }
 
     .sidebar-container {
+      z-index: 2001;
       width: $sideBarWidth;
       transition: transform var(--pure-transition-duration);
     }
@@ -514,8 +548,8 @@
     &.hideSidebar {
       .sidebar-container {
         pointer-events: none;
-        transition-duration: 0.3s;
         transform: translate3d(-$sideBarWidth, 0, 0);
+        transition-duration: 0.3s;
       }
     }
   }
@@ -531,7 +565,7 @@ body[layout="vertical"] {
   }
 
   .sidebar-logo-container {
-    background: $sidebarLogo;
+    background: var(--pure-theme-sidebar-logo);
   }
 
   .hideSidebar {
@@ -558,10 +592,10 @@ body[layout="vertical"] {
       .el-sub-menu {
         & > .el-sub-menu__title {
           & > span {
+            visibility: visible;
             width: 100%;
             height: 100%;
             text-align: center;
-            visibility: visible;
           }
         }
       }
@@ -595,6 +629,10 @@ body[layout="horizontal"] {
 
   @include merge-style($sideBarWidth);
 
+  .el-menu {
+    --el-menu-hover-text-color: var(--pure-theme-menu-text) !important;
+  }
+
   .fixed-header,
   .main-container {
     transition: none !important;
@@ -616,6 +654,7 @@ body[layout="mix"] {
 
   .el-menu {
     --el-menu-hover-bg-color: transparent !important;
+    --el-menu-hover-text-color: var(--pure-theme-menu-text) !important;
   }
 
   .hideSidebar {
@@ -644,10 +683,10 @@ body[layout="mix"] {
           padding: 0;
 
           & > span {
+            visibility: visible;
             width: 100%;
             height: 100%;
             text-align: center;
-            visibility: visible;
           }
         }
       }
