refactor: modify style

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -93,3 +93,10 @@
   background-color: #ffffff;
   color: #000000;
 }
+
+/* splitter */
+.splitter-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%
+}
