--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -365,4 +365,11 @@ html.dark {
     background-color: var(--el-color-primary);
     color: #ffffff;
   }
+
+  /* splitter */
+  .splitter-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%
+  }
 }
