--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -78,19 +78,29 @@
   overflow: hidden;
   border: 1px solid var(--el-border-color);
 }
+.mode-toggle-v {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-left: 8px;
+  padding: 3px;
+  background-color: var(--el-fill-color-light);
+  border-radius: 6px;
+  overflow: hidden;
+  border: 1px solid var(--el-border-color);
+}
 .mode-item {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 4px;
+  border-radius: 8px;
   font-size: 14px;
   color: var(--el-text-color-regular);
   cursor: pointer;
   transition: all 0.25s ease;
 }
 .mode-item.active {
-  background-color: #ffffff;
+  background-color: rgb(216, 215, 215);
   color: #000000;
 }
 
@@ -99,4 +109,10 @@
   display: flex;
   flex-direction: column;
   height: 100%
+}
+
+/* link */
+.link-text {
+  color: pink;
+  font-weight: bold;
 }
